# onpe-results

./: .gitignore  README.md  main.py  onpe_scraper.py  pyproject.toml
docs/: CLI_FOR_LLM.md
onpe_results/: __init__.py  cli.py  client.py  database.py  insights.py  models.py  normalizer.py  routes.py  scraper.py  utils.py
src/onpe_scraper/: __init__.py  api.py  cli.py  config.py  discovery.py  http.py  models.py  report.py  scraper.py  storage.py
