[project]
name = "onpe-results"
version = "0.1.0"
description = "Scraper for ONPE (Peru) live election results — replicates the official SPA's JSON API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "playwright>=1.60.0",
    "tenacity>=9.1.4",
]

[project.scripts]
onpe-scraper = "onpe_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onpe_scraper"]

[tool.uv]
package = true
